objects/MPM4_BASE__Milestone1_Time__c.object
<CustomObject>
    <fields>
        <fullName>MPM4_BASE__Date__c</fullName>
        <inlineHelpText>The date the time was incurred. Defaults to today if left blank.</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>A description about the time. For example, why the time was incurred.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Hours__c</fullName>
        <inlineHelpText>The number of hours charged. Note: This cannot be more than 1 day (24 hours).</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <label>ImportID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user who incurred the time being charged. Defaults to current user if left blank.</inlineHelpText>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Times_Incurred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Task__c</fullName>
        <inlineHelpText>The task that is having time charged to it.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Assigned_To__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Project_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>